test/pass/return-array.ditto
func identidad(array 2 int ls) -> array 2 int
    return ls;
end