test/fail/typecheck/ret-type-checked.ditto
func f() -> int
    return true;
end